[package]
name = "static-blog-rust-make"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comrak = "0.18.0"
grass = "0.13.1"
gray_matter = "0.2"
serde = "1.0.180"
tera = "1"
actix-web = "4"
actix-files = "0.6.2"
chrono = "0.4.26"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
pulldown-cmark = "0.9.3"
notify = "6.1.1"

[dev-dependencies]
